--- a/views/broadcasts.erb
+++ b/views/broadcasts.erb
@@ -20,7 +20,7 @@
           <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
             <%= broadcast.id %>
           </th>
-          <td class="px-6 py-4">
+          <td class="px-6 py-4" title="<%= distance_of_time_in_words(broadcast.created_at, Time.now) %>">
             <%= broadcast.created_at.strftime("%Y/%m/%d %I:%M:%S %p") %>
           </td>
           <td class="px-6 py-4">
